--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="container-fluid">
       <div class="header">
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
-        <h1>NAME HERE</h1>
-        <h2>CATCHY TAGLINE</h2>
+        <h1>HOUSE BARATHEON</h1>
+        <h2>"OURS IS THE FURY"</h2>
       </div>
     </div>
     
