--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <div class="container-fluid">
       <div class="header">
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
-        <h1>NAME HERE</h1>
-        <h2>CATCHY TAGLINE</h2>
+        <h1>Desirae Stiefel</h1>
+        <h2>For success, choose the best!</h2>
+	<a href="https://github.com/DStiefel91/week4files.git">Desirae Stiefel </a>
       </div>
     </div>
     
@@ -43,7 +44,7 @@
         <div class="icons">
           
           <!-- a href indicates a link (here, to your email address). -->
-          <a href="mailto:<YOUR_EMAIL_HERE>">
+          <a href="https://github.com/DStiefel91>">
             <!-- This is the icon for email. Since it's surrounded by the 'a' tag, it links to your email address! -->
             <i class="fa fa-envelope" title="Email"></i>
           </a>
