--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <div class="container-fluid">
       <div class="header">
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
-        <h1>NAME HERE</h1>
-        <h2>CATCHY TAGLINE</h2>
+        <h1>Logan Dahlke</h1>
+        <h2>"Once you've eliminated the impossible, whatever remains, no matter how improbable, must be the truth."</h2>
+	<a href ="https://www.github.com/ldahlke1/week4files">Logan Dahlke </a>
       </div>
     </div>
     
