--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <!-- The <head> section contains the meta-information about your website, including title and links to stylesheets. -->
   <head>
-    <title>Melissa A. Dix</title>
+    <title>BTC-Web-Dev Repo</title>
     
     <!-- Bootstrap CSS CDN – provides free CSS! (The container, header, and footer sections are all provided by Bootstrap.) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -35,12 +35,13 @@
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
         <h1>Our class website</h1>
         <h2>Merged with GitHub</h2>
+	<center>
 	<table>
 	<tr>
 	<td><a href="melissadix.html">Melissa Dix</a></td><td><a href="mailto:mdix2@blackhawk.edu">mdix2@blackhawk.edu</a></td>
 	</tr>
 	</table>
-	<a href="https://www.github.com/akalissa/week4files">Lissa Dix</a>
+	</center>
       </div>
     </div>
     
