Added my page and added to the table in the index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	<tr>
 	<td><a href="melissadix.html">Melissa Dix</a></td><td><a href="mailto:mdix2@blackhawk.edu">mdix2@blackhawk.edu</a></td>
 	</tr>
+	<tr>
+	<td><a href="AlyG.html">Aly Giannone</a></td><td><a href="mailto:agiannone@students.blackhawk.edu">agiannone@students.blackhawk.edu</a></td>
+	</tr>
 	</table>
 	</center>
       </div>
