ayo first fork edit

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
         <h1>Our class website</h1>
         <h2>Merged with GitHub</h2>
+        <h3><a href="mikey.html">Mikey J</a></h3>
 	<center>
 	<table>
 		<tr>
