--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
         <p><a href="melisa.html">Melissa Dix</a></p>
 
+        <p><a href="jessew.html">Jesse Worden</a></p>
+
 	<center>
 	<table>
 		<tr>
