--- a/dustin.html
+++ b/dustin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dustin's Page</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>&lt;h1&gt;Hello World! <br> This is Dustin's page.&lt;/h1&gt;</h1>
