modified index.html and added konley.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         <p><a href="peyton.html">Peyton Hendrikson</a></p>
 
+        <p><a href="konley.html">Konley Lokrantz</a></p>
+
         <p><a href="melisa.html">Melissa Dix</a></p>
 
 	<center>
