added jessie.html and link in index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
         <p><a href="melisa.html">Melissa Dix</a></p>
 
+        <p><a href="jessie.html">Melissa Dix</a></p>
+
 	<center>
 	<table>
 		<tr>
