added peyton.html and a spoopy audio clip ;)

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <!-- h1 and h2 are header tags (meaning larger text, with h1 > h2). -->
         <h1>Our class website</h1>
         <h2>Merged with GitHub</h2>
-        <p><a href="melisa.html">Melissa Dix</a></p>
 	<center>
 	<table>
 		<tr>
-			<td></td>
+			<td><p><a href="melissa.html">Melissa Dix</a></p></td>
+      <td><p><a href="peyton.html">Peyton</a></p></td>
 		</tr>
 	</table>
 	</center>
