--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+  </style>
   
   <!-- Replace the text between the tags with your own information! -->
   
   <!-- The <head> section contains the meta-information about your website, including title and links to stylesheets. -->
   <head>
     <title>Nicholas Rentz</title>
+
     
     <!-- Bootstrap CSS CDN – provides free CSS! (The container, header, and footer sections are all provided by Bootstrap.) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -37,7 +44,14 @@
         <h2>"OURS IS THE FURY"</h2>
       </div>
     </div>
-    
+    <table>
+  <tr>
+    <td>Nic Rentz</td>
+  </tr>
+  <tr>
+    <td><a href="nicrentz.html">WebSite</td>
+  </tr>
+</table>
     <footer class="footer">
       <div class="container">
         <div class="icons">
